# LD52

./: .gitignore  Cargo.toml  index.html  readme.md
assets/: border.aseprite  faces.aseprite  fruit.aseprite  tile.ase  veggies.aseprite
promo/: banner.aseprite  banner_2.aseprite  banner_3.aseprite  banner_4.aseprite  promo_itch.aseprite  tutorial.aseprite
src/: audio.rs  data.rs  editor.rs  grid.rs  inventory.rs  levels.rs  loading.rs  main.rs  overworld.rs  play.rs  progress.rs  puzzle.rs  text.rs  title.rs  tutorial.rs  tween.rs  util.rs  veggie.rs
